--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "temprepo",
   "version": "1.0.0",
-  "description": "",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,5 +25,7 @@
   },
   "dependencies": {
     "date-fns": "^3.0.0"
-  }
+  },
+  "main": "webpack.config.js",
+  "description": ""
 }
