--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,12 +4,10 @@
     "es2021": true
   },
   "extends": ["airbnb-base", "prettier"],
-
+  "plugins": ["prettier"],
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {
-    "no-console": "off"
-  }
+  "rules": {}
 }
